[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For making HTTP requests
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# For parsing HTML
scraper = "0.19"

# For serializing data to JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
